--- a/res/css/style.css
+++ b/res/css/style.css
@@ -203,23 +203,51 @@ nav div.avatar-container {
     background-color: #01579b;
 }
 
-
-/*https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_dropdown_right*/
 .dropdown-content {
     height: auto;
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: white;
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     right: 0;
     z-index: 1;
+    text-align: left;
+    padding: 0;
 }
 
-.dropdown-content a {
-    padding: 12px 16px;
+.dropdown-content a{
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 10px;
     display: block;
+    border-top: 1px solid #f1f1f1;
+}
+.dropdown-content p{
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-.show {display: block;}
+.profiles-container{
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+    grid-gap: 10px;
+    
+}
+.profile-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #f1f1f1;
+}
+.profile-box img{
+    width: 50%;
+    margin-top: 15px;
+}
+.profile-box button{
+    background-color:#910186;
+    text-align: center;
+    margin-bottom: 5px;
+}
