--- a/res/css/style.css
+++ b/res/css/style.css
@@ -203,6 +203,15 @@ nav div.avatar-container {
     background-color: #01579b;
 }
 
+
+.profile-box > button.followed {
+  background-color: white;
+  color: #910186;
+  border: 2px solid #910186
+
+}
+
+
 .dropdown-content {
     height: auto;
     display: none;
@@ -234,7 +243,7 @@ nav div.avatar-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
     grid-gap: 10px;
-    
+
 }
 .profile-box{
     display: flex;
@@ -245,6 +254,7 @@ nav div.avatar-container {
 .profile-box img{
     width: 50%;
     margin-top: 15px;
+    border-radius: 100%;
 }
 .profile-box button{
     background-color:#910186;
